# ush_teamwork

./: #1#  #Makefile#  .gitignore  1  10  11  113  12  2  23  81  CMakeLists.txt  Makefile  README.md  cat  d2  dddddddddddddddddddddddddddddddddddddddddddddd  e2  env_test  fff  go_ush.zsh  mx_ast_clear_list.c  mx_ast_creation.c  mx_ast_parse.c  mx_bg.c  mx_builtin_commands.c  mx_cd.c  mx_cd_functions.c  mx_cd_functions_1.c  mx_clear_all.c  mx_count_char_arr.c  mx_count_options.c  mx_create_job.c  mx_echo.c  mx_export.c  mx_fg.c  mx_filters.c  mx_get_git_info.c  mx_get_keys.c  mx_get_line.c  (+54 more)
inc/: ush.h
libmx/: Makefile  mx_create_node.c  mx_del_strarr.c  mx_itoa.c  mx_printint.c
libmx/inc/: libmx.h
src/: 1  aaa  mx_add_option.c  mx_bg.c  mx_builtin_commands.c  mx_cd.c  mx_cd_functions.c  mx_cd_functions_1.c  mx_check_parce_errors.c  mx_clear_all.c  mx_count_chr_quote.c  mx_count_options.c  mx_create_job.c  mx_echo.c  mx_echo_functions.c  mx_edit_command.c  mx_env.c  mx_env_functions.c  mx_env_functions_1.c  mx_env_functions_2.c  mx_exec_signal.c  mx_exit.c  mx_export.c  mx_export_functions.c  mx_fg.c  mx_get_char_index_quote.c  mx_get_git_info.c  mx_get_keys.c  mx_get_line.c  mx_hex_to_nbr.c  mx_init_shell.c  mx_jobs.c  mx_jobs_functions.c  mx_jobs_functions_2.c  mx_jobs_functions_print.c  mx_jobs_functions_wait.c  mx_jobs_stack.c  mx_jobs_stack2.c  mx_kill.c  mx_launch_bin.c  (+28 more)
src/ast/: libmx1.c  libmx2.c  mx_ast_clear_list.c  mx_ast_creation.c  mx_ast_parse.c  mx_ast_push_back.c  mx_check_parce_errors.c  mx_filters.c  mx_get_aliases.c  mx_get_char_index_quote.c  mx_get_functions.c  mx_parce_tokens.c  mx_print_errors.c  mx_quote_manage.c  mx_redir_push_back.c  mx_strtok.c  mx_strtrim_quote.c  mx_subst_backslash.c  mx_subst_command.c  mx_subst_dollar.c  mx_subst_tilde.c  mx_ush_parsed_line.c  mx_ush_read_line.c
