cmake_minimum_required(VERSION 3.15)
project(ush_team)

set(CMAKE_CXX_STANDARD 14)

include_directories(inc)
include_directories(libmx)
include_directories(libmx/inc)
include_directories(libmx/src)
include_directories(src)

add_executable(ush_team
        inc/ush.h
        libmx/inc/libmx.h
        libmx/src/mx_atoi.c
        libmx/src/mx_bubble_sort.c
        libmx/src/mx_clear_list.c
        libmx/src/mx_count_substr.c
        libmx/src/mx_count_words.c
        libmx/src/mx_create_node.c
        libmx/src/mx_del_strarr.c
        libmx/src/mx_file_to_str.c
        libmx/src/mx_foreach.c
        libmx/src/mx_get_char_index.c
        libmx/src/mx_get_sub_index.c
        libmx/src/mx_isalpha.c
        libmx/src/mx_isdigit.c
        libmx/src/mx_isspace.c
        libmx/src/mx_itoa.c
        libmx/src/mx_list_size.c
        libmx/src/mx_memcpy.c
        libmx/src/mx_pop_back.c
        libmx/src/mx_pop_front.c
        libmx/src/mx_pow.c
        libmx/src/mx_printchar.c
        libmx/src/mx_printerr.c
        libmx/src/mx_printint.c
        libmx/src/mx_printstr.c
        libmx/src/mx_printstr_color.c
        libmx/src/mx_push_back.c
        libmx/src/mx_push_front.c
        libmx/src/mx_realloc.c
        libmx/src/mx_str_reverse.c
        libmx/src/mx_strcat.c
        libmx/src/mx_strcmp.c
        libmx/src/mx_strcpy.c
        libmx/src/mx_strdel.c
        libmx/src/mx_strdup.c
        libmx/src/mx_strjoin.c
        libmx/src/mx_strlen.c
        libmx/src/mx_strncmp.c
        libmx/src/mx_strncpy.c
        libmx/src/mx_strndup.c
        libmx/src/mx_strnew.c
        libmx/src/mx_strsplit.c
        libmx/src/mx_strstr.c
        libmx/src/mx_swap_char.c
        libmx/libmx.a
        libmx/Makefile
        src/ast/libmx1.c
        src/ast/libmx2.c
        src/ast/mx_ast_clear_list.c
        src/ast/mx_ast_creation.c
        src/ast/mx_ast_parse.c
        src/ast/mx_ast_push_back.c
        src/ast/mx_check_parce_errors.c
        src/ast/mx_filters.c
        src/ast/mx_parce_tokens.c
        src/ast/mx_quote_manage.c
        src/ast/mx_redir_push_back.c
        src/ast/mx_strtok.c
        src/ast/mx_subst_backslash.c
        src/ast/mx_subst_dollar.c
        src/ast/mx_subst_tilde.c
        src/ast/mx_ush_parsed_line.c
        src/ast/mx_ush_read_line.c
        src/mx_bg.c
        src/mx_builtin_commands.c
        src/mx_cd.c
        src/mx_count_options.c
        src/mx_create_job.c
        src/mx_echo.c
        src/mx_env.c
        src/mx_exit.c
        src/mx_export.c
        src/mx_fg.c
        src/mx_get_type.c
        src/mx_hex_to_nbr.c
        src/mx_init_shell.c
        src/mx_jobs_functions.c
        src/mx_jobs_functions_2.c
        src/mx_jobs_functions_print.c
        src/mx_jobs_functions_wait.c
        src/mx_jobs_stack.c
        src/mx_launch_bin.c
        src/mx_launch_builtin.c
        src/mx_launch_job.c
        src/mx_launch_process.c
        src/mx_loop.c
        src/mx_nbr_to_hex.c
        src/mx_normalization.c
        src/mx_push_export.c
        src/mx_pwd.c
        src/mx_read_line.c
        src/mx_set_data.c
        src/mx_set_parametr.c
        src/mx_set_variable.c
        src/mx_signal.c
        src/mx_split_line.c
        src/mx_terminal.c
        src/mx_unset.c
        src/mx_which.c
        src/ush_main.c
        Makefile)
